--- a/templates/index.html
+++ b/templates/index.html
@@ -198,9 +198,7 @@
       <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="#">
           <i class="fas fa-download mr-2"></i>
-          My Resume          <a class="btn btn-outline-light btn-social mx-1" href="#">
-            <i class="fab fa-fw fa-dribbble"></i>
-          </a>
+          My Resume
         </a>
       </div>
 
