removing contact form until it can be fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -221,11 +221,16 @@
         <div class="divider-custom-line"></div>
       </div>
 
+      <h3 class="page-section-body text-center text-uppsercase text-secondary mb-0">surbanbusiness@gmail.com</h3>
+      
       <!-- Contact Section Form -->
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
+
+      <!--<div class="row">
+        <div class="col-lg-8 mx-auto">-->
+
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
+
+          <!--<form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Name</label>
@@ -260,7 +265,7 @@
               <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
             </div>
           </form>
-        </div>
+        </div>-->
       </div>
 
     </div>
@@ -565,7 +570,7 @@
 
   <!-- Contact Form JavaScript -->
   <script src="/static/js/jqBootstrapValidation.js"></script>
-  <script src="/static/js/contact_me.js"></script>
+  <!--<script src="/static/js/contact_me.js"></script>-->
 
   <!-- Custom scripts for this template -->
   <script src="/static/js/freelancer.min.js"></script>
